# chronometria-paginarum

./: .gitignore  README.md  README.rst  main.py  pyproject.toml
assets/ascii/: taico.txt
src/: books.py  config.py  data.py  layout.py  parameters.py  session.py  setup.py  timer.py  tracker.py  utils.py
tests/: test_metadata.py  test_table_layout.py
