[tool.poetry]
name = "Chronometria Paginarum"
version = "0.1.0"
description = "CLI for timing reading progress"
authors = ["felipeboffnunes <felipeboffnunes@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
